# qvbot

./: CMakeLists.txt  README.md  secrets.hpp
cmake/: FindDPP.cmake
src/: main.cpp
